src/main/java/org/apache/flink/generated/PatternLanguageParser.java
// Generated from PatternLanguage.g4 by ANTLR 4.7.1

package org.apache.flink.generated;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PatternLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SKIP_NO_SKIP=1, SKIP_SKIP_PAST_LAST=2, SKIP_SKIP_TO_FIRST=3, SKIP_SKIP_TO_LAST=4, 
		IN_SET=5, BETWEEN=6, LIKE=7, REGEXP=8, ESCAPE=9, OR_EXPR=10, AND_EXPR=11, 
		NOT_EXPR=12, WHERE=13, AS=14, SUM=15, AVG=16, MAX=17, MIN=18, ON=19, IS=20, 
		WEEKDAY=21, LW=22, INSTANCEOF=23, TYPEOF=24, CAST=25, CURRENT_TIMESTAMP=26, 
		UNTIL=27, AT=28, TIMEPERIOD_YEAR=29, TIMEPERIOD_YEARS=30, TIMEPERIOD_MONTH=31, 
		TIMEPERIOD_MONTHS=32, TIMEPERIOD_WEEK=33, TIMEPERIOD_WEEKS=34, TIMEPERIOD_DAY=35, 
		TIMEPERIOD_DAYS=36, TIMEPERIOD_HOUR=37, TIMEPERIOD_HOURS=38, TIMEPERIOD_MINUTE=39, 
		TIMEPERIOD_MINUTES=40, TIMEPERIOD_SEC=41, TIMEPERIOD_SECOND=42, TIMEPERIOD_SECONDS=43, 
		TIMEPERIOD_MILLISEC=44, TIMEPERIOD_MILLISECOND=45, TIMEPERIOD_MILLISECONDS=46, 
		TIMEPERIOD_MICROSEC=47, TIMEPERIOD_MICROSECOND=48, TIMEPERIOD_MICROSECONDS=49, 
		BOOLEAN_TRUE=50, BOOLEAN_FALSE=51, VALUE_NULL=52, WITHIN=53, HOUR_SHORT=54, 
		MINUTE_SHORT=55, SECOND_SHORT=56, MILLSECONDS_SHORT=57, NOT_FOLLOWED_BY=58, 
		FOLLOWED_BY=59, FOLLOWED_BY_ANY=60, GOES=61, EQUALS=62, QUESTION=63, LPAREN=64, 
		RPAREN=65, LBRACK=66, RBRACK=67, LCURLY=68, RCURLY=69, COLON=70, COMMA=71, 
		LNOT=72, BNOT=73, NOT_EQUAL=74, DIV=75, PLUS=76, MINUS=77, DEC=78, STAR=79, 
		MOD=80, GE=81, GT=82, LE=83, LT=84, BXOR=85, BOR=86, LOR=87, BAND=88, 
		BAND_ASSIGN=89, LAND=90, SEMI=91, DOT=92, NUM_LONG=93, NUM_DOUBLE=94, 
		NUM_FLOAT=95, ESCAPECHAR=96, ESCAPEBACKTICK=97, ATCHAR=98, HASHCHAR=99, 
		WS=100, SL_COMMENT=101, ML_COMMENT=102, TICKED_STRING_LITERAL=103, QUOTED_STRING_LITERAL=104, 
		STRING_LITERAL=105, IDENT=106, IntegerLiteral=107, FloatingPointLiteral=108;
	public static final int
		RULE_startPatternExpressionRule = 0, RULE_patternExpression = 1, RULE_skipStrategy = 2, 
		RULE_followedByOrNext = 3, RULE_followedBy = 4, RULE_followedByAny = 5, 
		RULE_notFollowedBy = 6, RULE_timeWindow = 7, RULE_patternFilterExpression = 8, 
		RULE_patternFilterExpressionMandatory = 9, RULE_patternFilterExpressionOptional = 10, 
		RULE_quantifier = 11, RULE_number_quantifier_greedy = 12, RULE_number_quantifier = 13, 
		RULE_star_quantifier = 14, RULE_plus_quantifier = 15, RULE_upper_bound = 16, 
		RULE_upper_bound_limited = 17, RULE_upper_bound_unlimited = 18, RULE_classIdentifier = 19, 
		RULE_escapableStr = 20, RULE_stopCondition = 21, RULE_expressionList = 22, 
		RULE_expression = 23, RULE_evalOrExpression = 24, RULE_evalAndExpression = 25, 
		RULE_negatedExpression = 26, RULE_evalEqualsExpression = 27, RULE_evalRelationalExpression = 28, 
		RULE_concatenationExpr = 29, RULE_additiveExpression = 30, RULE_multiplyExpression = 31, 
		RULE_unaryExpression = 32, RULE_eventProperty = 33, RULE_eventPropertyAtomic = 34, 
		RULE_eventPropertyIdent = 35, RULE_constant = 36, RULE_numberconstant = 37, 
		RULE_stringconstant = 38, RULE_keywordAllowedIdent = 39, RULE_number = 40;
	public static final String[] ruleNames = {
		"startPatternExpressionRule", "patternExpression", "skipStrategy", "followedByOrNext", 
		"followedBy", "followedByAny", "notFollowedBy", "timeWindow", "patternFilterExpression", 
		"patternFilterExpressionMandatory", "patternFilterExpressionOptional", 
		"quantifier", "number_quantifier_greedy", "number_quantifier", "star_quantifier", 
		"plus_quantifier", "upper_bound", "upper_bound_limited", "upper_bound_unlimited", 
		"classIdentifier", "escapableStr", "stopCondition", "expressionList", 
		"expression", "evalOrExpression", "evalAndExpression", "negatedExpression", 
		"evalEqualsExpression", "evalRelationalExpression", "concatenationExpr", 
		"additiveExpression", "multiplyExpression", "unaryExpression", "eventProperty", 
		"eventPropertyAtomic", "eventPropertyIdent", "constant", "numberconstant", 
		"stringconstant", "keywordAllowedIdent", "number"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'no_skip'", "'skip_past_last'", "'skip_to_first'", "'skip_to_last'", 
		"'in'", "'between'", "'like'", "'regexp'", "'escape'", "'or'", "'and'", 
		"'not'", "'where'", "'as'", "'sum'", "'avg'", "'max'", "'min'", "'on'", 
		"'is'", "'weekday'", "'lastweekday'", "'instanceof'", "'typeof'", "'cast'", 
		"'current_timestamp'", "'until'", "'at'", "'year'", "'years'", "'month'", 
		"'months'", "'week'", "'weeks'", "'day'", "'days'", "'hour'", "'hours'", 
		"'minute'", "'minutes'", "'sec'", "'second'", "'seconds'", "'msec'", "'millisecond'", 
		"'milliseconds'", "'usec'", "'microsecond'", "'microseconds'", "'true'", 
		"'false'", "'null'", "'within'", "'h'", "'m'", "'s'", "'ms'", "'!->'", 
		"'->'", "'->>'", "'=>'", "'='", "'?'", "'('", "')'", "'['", "']'", "'{'", 
		"'}'", "':'", "','", "'!'", "'~'", "'!='", "'/'", "'+'", "'-'", "'--'", 
		"'*'", "'%'", "'>='", "'>'", "'<='", "'<'", "'^'", "'|'", "'||'", "'&'", 
		"'&='", "'&&'", "';'", "'.'", "'\u18FF'", "'\u18FE'", "'\u18FD'", "'\\'", 
		"'`'", "'@'", "'#'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "SKIP_NO_SKIP", "SKIP_SKIP_PAST_LAST", "SKIP_SKIP_TO_FIRST", "SKIP_SKIP_TO_LAST", 
		"IN_SET", "BETWEEN", "LIKE", "REGEXP", "ESCAPE", "OR_EXPR", "AND_EXPR", 
		"NOT_EXPR", "WHERE", "AS", "SUM", "AVG", "MAX", "MIN", "ON", "IS", "WEEKDAY", 
		"LW", "INSTANCEOF", "TYPEOF", "CAST", "CURRENT_TIMESTAMP", "UNTIL", "AT", 
		"TIMEPERIOD_YEAR", "TIMEPERIOD_YEARS", "TIMEPERIOD_MONTH", "TIMEPERIOD_MONTHS", 
		"TIMEPERIOD_WEEK", "TIMEPERIOD_WEEKS", "TIMEPERIOD_DAY", "TIMEPERIOD_DAYS", 
		"TIMEPERIOD_HOUR", "TIMEPERIOD_HOURS", "TIMEPERIOD_MINUTE", "TIMEPERIOD_MINUTES", 
		"TIMEPERIOD_SEC", "TIMEPERIOD_SECOND", "TIMEPERIOD_SECONDS", "TIMEPERIOD_MILLISEC", 
		"TIMEPERIOD_MILLISECOND", "TIMEPERIOD_MILLISECONDS", "TIMEPERIOD_MICROSEC", 
		"TIMEPERIOD_MICROSECOND", "TIMEPERIOD_MICROSECONDS", "BOOLEAN_TRUE", "BOOLEAN_FALSE", 
		"VALUE_NULL", "WITHIN", "HOUR_SHORT", "MINUTE_SHORT", "SECOND_SHORT", 
		"MILLSECONDS_SHORT", "NOT_FOLLOWED_BY", "FOLLOWED_BY", "FOLLOWED_BY_ANY", 
		"GOES", "EQUALS", "QUESTION", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
		"LCURLY", "RCURLY", "COLON", "COMMA", "LNOT", "BNOT", "NOT_EQUAL", "DIV", 
		"PLUS", "MINUS", "DEC", "STAR", "MOD", "GE", "GT", "LE", "LT", "BXOR", 
		"BOR", "LOR", "BAND", "BAND_ASSIGN", "LAND", "SEMI", "DOT", "NUM_LONG", 
		"NUM_DOUBLE", "NUM_FLOAT", "ESCAPECHAR", "ESCAPEBACKTICK", "ATCHAR", "HASHCHAR", 
		"WS", "SL_COMMENT", "ML_COMMENT", "TICKED_STRING_LITERAL", "QUOTED_STRING_LITERAL", 
		"STRING_LITERAL", "IDENT", "IntegerLiteral", "FloatingPointLiteral"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PatternLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PatternLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartPatternExpressionRuleContext extends ParserRuleContext {
		public PatternExpressionContext patternExpression() {
			return getRuleContext(PatternExpressionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PatternLanguageParser.EOF, 0); }
		public StartPatternExpressionRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startPatternExpressionRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PatternLanguageListener ) ((PatternLanguageListener)listener).enterStartPatternExpressionRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PatternLanguageListener ) ((PatternLanguageListener)listener).exitStartPatternExpressionRule(this);
		}
	}

	public final StartPatternExpressionRuleContext startPatternExpressionRule() throws RecognitionException {
		StartPatternExpressionRuleContext _localctx = new StartPatternExpressionRuleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_startPatternExpressionRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			patternExpression();
			setState(83);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PatternExpressionContext extends ParserRuleContext {
		public SkipStrategyContext skipStrategy() {
			return getRuleContext(SkipStrategyContext.class,0);
		}
		public PatternFilterExpressionContext patternFilterExpression() {
			return getRuleContext(PatternFilterExpressionContext.class,0);
		}
		public List<FollowedByOrNextContext> followedByOrNext() {
			return getRuleContexts(FollowedByOrNextContext.class);
		}
		public FollowedByOrNextContext followedByOrNext(int i) {
			return getRuleContext(FollowedByOrNextContext.class,i);
		}
		public TimeWindowContext timeWindow() {
			return getRuleContext(TimeWindowContext.class,0);
		}
		public PatternExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_patternExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PatternLanguageListener ) ((PatternLanguageListener)listener).enterPatternExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PatternLanguageListener ) ((PatternLanguageListener)listener).exitPatternExpression(this);
		}
	}

	public final PatternExpressionContext patternExpression() throws RecognitionException {
		PatternExpressionContext _localctx = new PatternExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_patternExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			skipStrategy();
			setState(86);
			patternFilterExpression();
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 58)) & ~0x3f) == 0 && ((1L << (_la - 58)) & ((1L << (NOT_FOLLOWED_BY - 58)) | (1L << (FOLLOWED_BY - 58)) | (1L << (FOLLOWED_BY_ANY - 58)) | (1L << (LNOT - 58)) | (1L << (TICKED_STRING_LITERAL - 58)) | (1L << (IDENT - 58)))) != 0)) {
				{
				{
				setState(87);
				followedByOrNext();
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WITHIN) {
				{
				setState(93);
				timeWindow();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SkipStrategyContext extends ParserRuleContext {
		public Token s;
		public Token k;
		public Token m;
		public TerminalNode MOD() { return getToken(PatternLanguageParser.MOD, 0); }
		public StringconstantContext stringconstant() {
			return getRuleContext(StringconstantContext.class,0);
		}
		public TerminalNode SKIP_SKIP_TO_FIRST() { return getToken(PatternLanguageParser.SKIP_SKIP_TO_FIRST, 0); }
		public TerminalNode LBRACK() { return getToken(PatternLanguageParser.LBRACK, 0); }
		public TerminalNode RBRACK() { return getToken(PatternLanguageParser.RBRACK, 0); }
		public TerminalNode SKIP_SKIP_TO_LAST() { return getToken(PatternLanguageParser.SKIP_SKIP_TO_LAST, 0); }
		public TerminalNode SKIP_NO_SKIP() { return getToken(PatternLanguageParser.SKIP_NO_SKIP, 0); }
		public TerminalNode SKIP_SKIP_PAST_LAST() { return getToken(PatternLanguageParser.SKIP_SKIP_PAST_LAST, 0); }
		public SkipStrategyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_skipStrategy; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PatternLanguageListener ) ((PatternLanguageListener)listener).enterSkipStrategy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PatternLanguageListener ) ((PatternLanguageListener)listener).exitSkipStrategy(this);
		}
	}

	public final SkipStrategyContext skipStrategy() throws RecognitionException {
		SkipStrategyContext _localctx = new SkipStrategyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_skipStrategy);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(MOD);
			setState(109);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SKIP_NO_SKIP:
				{
				{
				setState(97);
				((SkipStrategyContext)_localctx).s = match(SKIP_NO_SKIP);
				}
				}
				break;
			case SKIP_SKIP_PAST_LAST:
				{
				{
				setState(98);
				((SkipStrategyContext)_localctx).s = match(SKIP_SKIP_PAST_LAST);
				}
				}
				break;
			case SKIP_SKIP_TO_FIRST:
				{
				setState(99);
				((SkipStrategyContext)_localctx).s = match(SKIP_SKIP_TO_FIRST);
				setState(100);
				((SkipStrategyContext)_localctx).k = match(LBRACK);
				setState(101);
				stringconstant();
				setState(102);
				((SkipStrategyContext)_localctx).m = match(RBRACK);
				}
				break;
			case SKIP_SKIP_TO_LAST:
				{
				setState(104);
				((SkipStrategyContext)_localctx).s = match(SKIP_SKIP_TO_LAST);
				setState(105);
				((SkipStrategyContext)_localctx).k = match(LBRACK);
				setState(106);
				stringconstant();
				setState(107);
				((SkipStrategyContext)_localctx).m = match(RBRACK);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FollowedByOrNextContext extends ParserRuleContext {
		public Token f;
		public FollowedByContext followedBy() {
			return getRuleContext(FollowedByContext.class,0);
		}
		public FollowedByAnyContext followedByAny() {
			return getRuleContext(FollowedByAnyContext.class,0);
		}
		public NotFollowedByContext notFollowedBy() {
			return getRuleContext(NotFollowedByContext.class,0);
		}
		public PatternFilterExpressionContext patternFilterExpression() {
			return getRuleContext(PatternFilterExpressionContext.class,0);
		}
		public TerminalNode LNOT() { return getToken(PatternLanguageParser.LNOT, 0); }
		public FollowedByOrNextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_followedByOrNext; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PatternLanguageListener ) ((PatternLanguageListener)listener).enterFollowedByOrNext(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PatternLanguageListener ) ((PatternLanguageListener)listener).exitFollowedByOrNext(this);
		}
	}

	public final FollowedByOrNextContext followedByOrNext() throws RecognitionException {
		FollowedByOrNextContext _localctx = new FollowedByOrNextContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_followedByOrNext);
		int _la;
		try {
			setState(118);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FOLLOWED_BY:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				followedBy();
				}
				break;
			case FOLLOWED_BY_ANY:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				followedByAny();
				}
				break;
			case NOT_FOLLOWED_BY:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				notFollowedBy();
				}
				break;
			case LNOT:
			case TICKED_STRING_LITERAL:
			case IDENT:
				enterOuterAlt(_localctx, 4);
				{
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LNOT) {
					{
					setState(114);
					((FollowedByOrNextContext)_localctx).f = match(LNOT);
					}
				}
